--- a/tela.css
+++ b/tela.css
@@ -12,10 +12,16 @@ body {
     align-items: center;
     padding: 15px;
 }
-
 .logo {
+    font-size: 30px;
+    text-align:justify;
+}
+.logo img{
     font-size: 22px;
     font-weight: bold;
+    border-radius: 100px;
+    width:100px ;
+    height:100px ;
 }
 
 .botoes {
@@ -85,10 +91,11 @@ body {
 }
 
 .card img {
-    width: 150px;
-    height: 120px;
-    border-radius: 10px;
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
     object-fit: cover;
+    margin-right: 20px;
 }
 
 /* Rodapé */
