--- a/tela.css
+++ b/tela.css
@@ -54,7 +54,7 @@ body {
 
 /* Banner */
 .banner {
-    background-image: url('Cristo.jpeg');
+    background-image: url('assests/cristp.jpg');
     background-size: cover;
     background-position: down;
     height: 300px;
