--- a/tela.css
+++ b/tela.css
@@ -24,16 +24,12 @@ body {
     height:100px ;
 }
 
-.botoes {
-    display: flex;
-    gap: 10px;
-}
 
 .botoes button {
     background: white;
     border: none;
     padding: 8px 16px;
-    border-radius: 10px;
+    border-radius: 40px;
     cursor: pointer;
 }
 
@@ -56,7 +52,7 @@ body {
 .banner {
     background-image: url('assests/cristp.jpg');
     background-size: cover;
-    background-position: down;
+    background-position: top;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -71,7 +67,10 @@ body {
     text-align: left;
     font-size: 20px;
 }
-
+.abas{
+    border: none;
+    
+}
 /* Sessão de destaques */
 .destaques {
     padding: 20px;
